# DHC_Frontend/src/api/models/ApiServerInfoGet200Response.ts
@@ -1,75 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-/**
- * 默认模块
- * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
- *
- * The version of the OpenAPI document: 1.0.0
- * 
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-import { mapValues } from '../runtime';
-/**
- * 
- * @export
- * @interface ApiServerInfoGet200Response
- */
-export interface ApiServerInfoGet200Response {
-    /**
-     * 
-     * @type {string}
-     * @memberof ApiServerInfoGet200Response
-     */
-    clients: string;
-    /**
-     * 
-     * @type {string}
-     * @memberof ApiServerInfoGet200Response
-     */
-    maxClients: string;
-}
-
-/**
- * Check if a given object implements the ApiServerInfoGet200Response interface.
- */
-export function instanceOfApiServerInfoGet200Response(value: object): value is ApiServerInfoGet200Response {
-    if (!('clients' in value) || value['clients'] === undefined) return false;
-    if (!('maxClients' in value) || value['maxClients'] === undefined) return false;
-    return true;
-}
-
-export function ApiServerInfoGet200ResponseFromJSON(json: any): ApiServerInfoGet200Response {
-    return ApiServerInfoGet200ResponseFromJSONTyped(json, false);
-}
-
-export function ApiServerInfoGet200ResponseFromJSONTyped(json: any, ignoreDiscriminator: boolean): ApiServerInfoGet200Response {
-    if (json == null) {
-        return json;
-    }
-    return {
-        
-        'clients': json['Clients'],
-        'maxClients': json['MaxClients'],
-    };
-}
-
-export function ApiServerInfoGet200ResponseToJSON(json: any): ApiServerInfoGet200Response {
-    return ApiServerInfoGet200ResponseToJSONTyped(json, false);
-}
-
-export function ApiServerInfoGet200ResponseToJSONTyped(value?: ApiServerInfoGet200Response | null, ignoreDiscriminator: boolean = false): any {
-    if (value == null) {
-        return value;
-    }
-
-    return {
-        
-        'Clients': value['clients'],
-        'MaxClients': value['maxClients'],
-    };
-}
-
